# audio_bot

./: README.md  pyproject.toml
audio_bot/scripts/: audio.py  bot.py
